# zephyr-caniot-controller

./: .clang-format  .editorconfig  .env  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  Makefile  VERSION  commands.txt  doxyconfig  ipc_to_custom_acn52840.overlay  iterables.ld  nucleo_f429zi.overlay  platformio.ini  prj.conf  prj_nucleo_f429zi.conf  prj_qemu_x86.conf  readme.md  requirements.txt  west.yml
bins/: bootloader_debug.hex  readme.md
boards/: f429zi_ram_fatfs.conf  f429zi_spi_disk.conf  ipc_debug.overlay  mps2_an385.conf  mps2_an385.overlay  nucleo_f429zi.conf  nucleo_f429zi.overlay  qemu_x86.conf  qemu_x86.overlay  readme.md
creds/: .gitignore  creds.json
docs/: api.http  bluetooth-hci.md  bluetooth-xiaomi.md  bluetooth.md  board.md  can.md  caniot.md  cloud-aws.md  commands.md  config.md  configuration.md  credentials.md  crypto_rsa.md  devices.md  devicetree.md  discovery-server.md  dns.md  embed_binaries.md  filesystem.md  flash.md  flash_management.md  http-server.md  http.md  interfaces.md  know_issues.md  mbedtls.md  mcp2551.md  mcuboot.md  misc.md  net.md  nucleo_f429zi_autoconf.h  problems.md  ram_report.txt  readme.md  readme.old.md  rom_report.txt  sections.md  settings.md  shell.md  sntp.md  (+11 more)
overlays/: build_type_debug.conf  debug.conf  disable_app_all.conf  f429zi_ram_fatfs.conf  mcuboot.conf  mps2_an385_lan9220.conf  mps2_an385_lan9220.overlay  mps2_an385_slip.conf  mps2_an385_slip.overlay  nucleo_f429zi_logging_fs.conf  nucleo_f429zi_mcuboot.conf  nucleo_f429zi_ram_fatfs.conf  nucleo_f429zi_ram_fatfs.overlay  nucleo_f429zi_shell.conf  nucleo_f429zi_spi_disk.conf  nucleo_f429zi_usb_cdc_acm.conf  nucleo_f429zi_usb_net.conf
scripts/: .gitignore  api.http  api.py  bin2c.py  caniot-temperatures.http  caniot_heating_ctrl.py  caniot_heating_shutters_ctrl.py  caniot_telemetry_query_robustness.py  chunk_demo.py  cli.sh  crc32_ieee.py  (+24 more)
src/: CMakeLists.txt  app_sections.h  appfs.c  appfs.h  appfs2.c  config.h  crypto.c  crypto.h  devices_controller.c  devices_controller.h  http_conn.c  http_conn.h  http_server.c  http_server.h  http_utils.c  interface.c  interface.h  main.c  main.h  mydevices.c  mydevices.h  net_interface.c  net_interface.h  net_time.c  net_time.h  soc_periph.c  soc_temp.c  soc_temp.h  system.c  system.h  udp_discovery.c  udp_discovery.h  user_io.c  user_io.h  utils.c  utils.h
src/ble/: CMakeLists.txt  Kconfig  ble.c  ble.h  obserser.c  obserser_legacy.c  observer.c  xiaomi_record.h
src/can/: Kconfig  can.c  can.h  can_interface.c  can_interface.h
src/can_if/: can_if.c  can_if.h
src/canif/: canif.c  canif.h  caniot_controller.c  caniot_controller.h  dispatcher.c  dispatcher.h
src/cantcp/: Kconfig  cantcp.h  cantcp_client.c  cantcp_core.c  cantcp_core.h  cantcp_server.c  cantcp_server.h
src/cantest/: cantest.c
src/cloud/: CMakeLists.txt  Kconfig  aws.c  aws.h  backoff.c  backoff.h  cloud.c  cloud.h  cloud_app.c  cloud_internal.h  custom.c  mqttc.c  mqttc.h  utils.c  utils.h
src/cloud/AWS/: CMakeLists.txt  Kconfig  aws.c  aws.h
src/cloud/core/: CMakeLists.txt  backoff.c  backoff.h  cloud.c  cloud.h  cloud_internal.h  mqttc.c  mqttc.h  utils.c  utils.h
src/creds/: .gitignore  CMakeLists.txt  Kconfig  credentials.c  credentials.h  creds_internal.h  flash_creds.c  flash_creds.h  fs_creds.c  fs_creds.h  hardcoded_creds.c  hardcoded_creds.h  manager.c  manager.h  readme.md  utils.c  utils.h
src/crypto/: CMakeLists.txt  crypto.c  crypto.h
src/dfu/: Kconfig  dfu.c  dfu.h
src/discovery_server/: CMakeLists.txt  Kconfig  udp_discovery.c
src/drivers/crc/: stm32_crc32.c  stm32_crc32.h
src/fs/: CMakeLists.txt  Kconfig  app_utils.c  app_utils.h  asyncrw.c  asyncrw.h
src/ha/: CMakeLists.txt  Kconfig  ble_controller.c  ble_controller.h  caniot_controller.c  caniot_controller.h  config.c  config.h  ct_controller.c  ct_controller.h  data.c  data.h  datalogger.c  datalogger.h  devices.c  devices.h  emu.c  emu.h  event.c  event.h  events.c  events.h  ha.h  ha_controller.c  ha_controller.h  json.c  json.h  room.c  room.h  utils.c  utils.h
src/ha/core/: CMakeLists.txt  config.c  config.h  data.c  data.h  devices.c  devices.h  ha.c  ha.h  ha_spe.h  room.c  room.h  subs_extended.c  subs_extended.h  utils.c  utils.h
src/ha/devices/: CMakeLists.txt  all.h  caniot.c  caniot.h  f429zi.c  f429zi.h  garage.c  garage.h  xiaomi.c  xiaomi.h
src/http_server/: CMakeLists.txt  Kconfig  debug_server.c  debug_server.h  dfu_server.c  dfu_server.h  files_server.c  files_server.h  http_conn.c  http_conn.h  http_headers.c  http_request.c  http_request.h  http_response.c  http_response.h  http_routes.c  http_server.c  http_server.h  http_session.c  http_session.h  http_stream.c  http_stream.h  http_utils.c  http_utils.h  prometheus_client.c  prometheus_client.h  rest_server.c  rest_server.h  routes.c  routes.h  routes.txt  routes_g.c  test_server.c  test_server.h  web_server.c  web_server.h
src/http_server/core/: CMakeLists.txt  http_headers.h  http_request.c  http_request.h  http_response.c  http_response.h  http_server.c  http_server.h  http_session.c  http_session.h  http_utils.c  http_utils.h  routes.c  routes.h
src/http_server/creds/: credentials.h  key2.pem
src/http_server/creds/rsa1024/: cert.der  cert.pem  key.pem  key2.der
src/http_server/creds/rsa2048/: cert.der  cert.pem  key.der  key.pem
src/ipc_uart/: ipc.c  ipc.h  ipc_frame.h
src/libs/: CMakeLists.txt  basename.c  dirname.c
src/lua/: CMakeLists.txt  Kconfig  emblua.c  fsdefault.c  libc_stubs.c  modules.c  modules.h  orchestrator.c  orchestrator.h  utils.c  utils.h
src/mbedtls_config/: Kconfig  caniot-cfg.h  mbedtls-cfg.h
src/settings/: settings.c  settings.h
src/system/: service.c  service.h
src/usb/: CMakeLists.txt  usb.c  usb.h  usb_cdc_acm.c
src/user/: CMakeLists.txt  auth.c  auth.h  user.c  user.h  users_g.c
src/userio/: CMakeLists.txt  button.c  button.h  leds.c  leds.h  user_io.c  userio.c  userio.h
src/utils/: buffers.c  buffers.h  contig_alloc.c  contig_alloc.h  crc32_ieee.c  crc32_ieee.h  fmt.c  fmt.h  freelist.c  freelist.h  misc.c  misc.h
(+58 files in other folders)
